# TruthMark

./: README.md
ai-engine/: .env.example  .gitignore  QUICKSTART.md  README.md  app.py  config.py  requirements.txt  run.py  test_api.py
ai-model/: README.md  fine-tuning-dataset.jsonl  fine_tune_llama_3_1_8b_with_unsloth.py  merged_dataset.parquet  requirements.txt
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: brave_news.py  search_news.py
backend/app/services/: brave_news.py  search_news.py
chrome-extension/: README.md  content.css  manifest.json  popup.html  test-selection.html
chrome-extension/scripts/: background.js  content.js  popup.js
landing-page/: index.html  tailwind.config.js
landing-page/src/: App.tsx  index.css
landing-page/src/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Privacy.tsx
